--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ input {
 button {
   border: none;
 }
+.navleft {
+  display: flex;
+  align-items: center;
+}
 body {
   height: 100%;
   display: flex;
@@ -22,13 +26,17 @@ body {
   justify-content: space-between;
   font-family: "Rubik", sans-serif;
 }
+.menu-btn {
+  display: none;
+}
 main {
   flex-grow: 1;
 }
 .conteiner {
   width: 100%;
-  max-width: 1412px;
+  max-width: 1452px;
   margin: 0 auto;
+  padding: 20px;
 }
 header {
   background-image: url("../img/png/fon-icon.png");
@@ -50,7 +58,7 @@ header {
 .sitnav-link {
   display: flex;
   align-items: center;
-  gap: 35px;
+  gap: 40px;
 }
 
 .nav-link {
@@ -64,5 +72,29 @@ header {
 }
 .sitenav-icon {
   display: flex;
+
   gap: 26px;
+}
+@media (max-width: 900px) {
+  .sitenav-icon a img {
+    width: 50px;
+    height: 50px;
+  }
+  .logo {
+    width: 160px;
+    height: 75px;
+  }
+}
+@media (max-width: 768px) {
+  .sitnav-link {
+    display: none;
+  }
+  .menu-btn {
+    display: block;
+  }
+}
+@media (max-width: 500px) {
+  header {
+    background-image: url("../img/png/header-bg.png");
+  }
 }
