--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,30 @@ button {
   display: flex;
   align-items: center;
 }
+.title {
+  font-family: "Lobster", sans-serif;
+  color: white;
+  line-height: 100%;
+
+  font-size: 100px;
+}
 body {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-family: "Rubik", sans-serif;
+}
+.hero {
+  flex-grow: 1;
+}
+.hero-conteiner {
+  height: 100%;
+  text-align: center;
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .menu-btn {
   display: none;
@@ -39,6 +57,8 @@ main {
   padding: 20px;
 }
 header {
+  display: flex;
+  flex-direction: column;
   background-image: url("../img/png/fon-icon.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -46,8 +66,6 @@ header {
   height: 100vh;
   padding-top: 28.5px;
   padding-bottom: 33px;
-}
-.site-nav {
 }
 
 .stnav-conteiner {
@@ -75,6 +93,11 @@ header {
 
   gap: 26px;
 }
+@media (max-width: 1200px) {
+  .title {
+    font-size: 80px;
+  }
+}
 @media (max-width: 900px) {
   .sitenav-icon a img {
     width: 50px;
@@ -83,6 +106,9 @@ header {
   .logo {
     width: 160px;
     height: 75px;
+  }
+  .title {
+    font-size: 60px;
   }
 }
 @media (max-width: 768px) {
@@ -96,5 +122,19 @@ header {
 @media (max-width: 500px) {
   header {
     background-image: url("../img/png/header-bg.png");
+  }
+
+  .sitenav-icon {
+    gap: 10px;
+  }
+}
+@media (max-width: 635px) {
+  .title {
+    font-size: 50px;
+  }
+}
+@media (max-width: 450px) {
+  .title {
+    font-size: 30px;
   }
 }
