--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-html {
-  height: 100%;
-}
+
 a {
   text-decoration: none;
 }
@@ -14,6 +12,12 @@ input {
 }
 button {
   border: none;
+}
+.section-title {
+  font-size: 50px;
+  line-height: 50px;
+  letter-spacing: -0.33px;
+  font-family: "Lobster", sans-serif;
 }
 .navleft {
   display: flex;
@@ -39,7 +43,7 @@ body {
 .hero-conteiner {
   height: 100%;
   text-align: center;
-  flex-grow: 2;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -58,12 +62,13 @@ main {
 }
 header {
   display: flex;
+  height: 100vh;
   flex-direction: column;
   background-image: url("../img/png/fon-icon.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+
   padding-top: 28.5px;
   padding-bottom: 33px;
 }
@@ -90,12 +95,18 @@ header {
 }
 .sitenav-icon {
   display: flex;
-
-  gap: 26px;
+  gap: 30px;
 }
 @media (max-width: 1200px) {
   .title {
     font-size: 80px;
+  }
+  .about-img img {
+    width: 487px;
+    height: 437px;
+  }
+  text {
+    font-size: 15px;
   }
 }
 @media (max-width: 900px) {
@@ -110,15 +121,23 @@ header {
   .title {
     font-size: 60px;
   }
+  .about-img img {
+    width: 400px;
+    height: 337px;
+  }
 }
 @media (max-width: 768px) {
-  .sitnav-link {
+  .sitnavlink {
     display: none;
   }
-  .menu-btn {
-    display: block;
+  .about-img img {
+    display: none;
+  }
+  .about {
+    padding:;
   }
 }
+
 @media (max-width: 500px) {
   header {
     background-image: url("../img/png/header-bg.png");
@@ -128,13 +147,53 @@ header {
     gap: 10px;
   }
 }
-@media (max-width: 635px) {
-  .title {
-    font-size: 50px;
-  }
-}
-@media (max-width: 450px) {
+
+@media (max-width: 420px) {
   .title {
     font-size: 30px;
   }
+
+  .about-img2 {
+    display: flex;
+    width: 300px;
+    height: 200px;
+  }
+}
+/* main  */
+.about-conteiner {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.text {
+  padding-bottom: 30px;
+  font-family: "Rubik", sans-serif;
+  line-height: 30px;
+  font-size: 20px;
+  color: #555555;
+}
+
+.about {
+  background-color: #fff4d8;
+  padding: 82px 0;
+}
+.about-intro {
+  width: 100%;
+  max-width: 554px;
+  align-items: center;
+}
+
+.about-intro .section-title {
+  margin-bottom: 33px;
+}
+.btn {
+  padding-top: 53px;
+  padding: 20px 30px;
+  background-color: #f39c11;
+  color: white;
+  border-radius: 10px;
+}
+.about-img2 {
+  display: none;
 }
